# AuthApp

./: .gitignore  README.md
api/: .env  app.py  app_factory.py  auth_app.py  db-init.sql  db.sql  pyproject.toml
api/configs/: __init__.py  app_config.py  models_generate.py
api/configs/deploy/: __init__.py
api/configs/feature/: __init__.py
api/configs/middleware/: __init__.py
api/configs/packaging/: __init__.py
api/contexts/: __init__.py
api/controllers/: error.py
api/controllers/args/: __init__.py
api/controllers/auth/: __init__.py  login_auth.py
api/controllers/org/: __init__.py
api/controllers/user/: __init__.py  login.py  user.py
api/extensions/: ext_blueprints.py  ext_database.py  ext_logging.py  ext_login.py  ext_migrate.py  ext_redis.py
api/fields/: login_field.py
api/libs/: exception.py  external_api.py  field_validate.py  helper.py  passport.py  password.py  snowflake.py
api/migrations/versions/: 2db4e2d13e0e_init_system_table.py  acf942c08ee9_init_table.py  dc89c3e002f5_init_table.py
api/models/: account.py  base.py  engine.py  organization.py  resource.py  role.py  sys_dict.py  types.py  user.py
api/services/: account_service.py  login_auth_service.py  user_service.py
api/services/errors/: account.py  base.py
ui/: package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: HomeView.vue  LoginView.vue
ui/src/router/: index.js
ui/src/services/: authService.js
web/: .env  .gitignore
web/src/api/: index.js
web/src/utils/http/: interceptors.js
