[project]
name = "authapp"
version = "0.1.0"
description = ""

authors = [
    {name = "willian",email = "willian.wyann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
