[project]
name = "authapp"
version = "0.1.0"
description = ""

authors = [
    {name = "willian",email = "willian.wyann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    # flask restful 风格切换
    "flask-restful (>=0.3.10,<0.4.0)",
    # 数据验证框架
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlacodegen (>=2.0.0,<3.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"